--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,19 @@ classifiers = [
 ]
 
 
+[tool.uv]
+package = false
+dev-dependencies = [
+    "pytest>=8.0.0",
+    "pytest-cov>=4.1.0",
+    "mypy>=1.8.0",
+    "ruff>=0.3.0",
+    "pandas-stubs>=2.0.0",
+    "types-pyyaml>=6.0.0",
+]
+
+[tool.uv.sources]
+
 [tool.ruff]
 target-version = "py313"
 line-length = 100
@@ -79,18 +92,6 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = "--strict-markers --cov=src --cov-report=term-missing"
-
-[tool.uv]
-dev-dependencies = [
-    "pytest>=8.0.0",
-    "pytest-cov>=4.1.0",
-    "mypy>=1.8.0",
-    "ruff>=0.3.0",
-    "pandas-stubs>=2.0.0",
-    "types-pyyaml>=6.0.0",
-]
-
-[tool.uv.sources]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
