Add package folder

--- a/.streamlit/secrets.toml.example
+++ b/.streamlit/secrets.toml.example
@@ -4,7 +4,7 @@
 
 [auth]
 # Admin credentials
-# Generate hashed password with: python -c "from src.infra.auth import hash_password; print(hash_password('your_password'))"
+# Generate hashed password with: python -c "from src.petanque_manager.infra.auth import hash_password; print(hash_password('your_password'))"
 admin_username = "admin"
 admin_password = "$2b$12$KIX8qS2zqD5kqN2xqH3xL.yZxqH3xL.yZxqH3xL.yZxqH3xL.yZxqO"  # Default: "admin"
 
