--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,6 @@ classifiers = [
 
 
 [tool.uv]
-package = false
 dev-dependencies = [
     "pytest>=8.0.0",
     "pytest-cov>=4.1.0",
@@ -94,7 +93,8 @@ python_functions = ["test_*"]
 addopts = "--strict-markers --cov=src --cov-report=term-missing"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src"]
+packages = ["src/petanque_manager"]
+
 
 [build-system]
 requires = ["hatchling"]
