--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pyyaml>=6.0",
     "pandas>=2.0.0",
     "bcrypt>=4.1.0",
+    "psycopg2-binary>=2.9.11",
 ]
 keywords = ["petanque", "tournament", "streamlit", "sports"]
 classifiers = [
