--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,15 +27,14 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
 ]
 
-
-[tool.uv]
-dev-dependencies = [
-    "pytest>=8.0.0",
-    "pytest-cov>=4.1.0",
-    "mypy>=1.8.0",
-    "ruff>=0.3.0",
-    "pandas-stubs>=2.0.0",
-    "types-pyyaml>=6.0.0",
+[dependency-groups]
+dev = [
+    "mypy>=1.19.1",
+    "pandas-stubs>=2.3.3.251219",
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
+    "ruff>=0.14.10",
+    "types-pyyaml>=6.0.12.20250915",
 ]
 
 [tool.uv.sources]
