--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pandas>=2.0.0",
     "bcrypt>=4.1.0",
     "psycopg2-binary>=2.9.11",
+    "openpyxl>=3.1.0",
 ]
 keywords = ["petanque", "tournament", "streamlit", "sports"]
 classifiers = [
